# python_utils

./: .gitignore  README.md  coordinates.csv  debug.json  down.py  expand_includes.py  index.py  latAndLon.py  llama.md  llama_md.py  lll.md  main.py  output.html  pyproject.toml  translate_directory.py  translate_md.py
md/: 111.md  SUMMARY.md  appendix-00.md  appendix-01-keywords.md  appendix-02-operators.md  appendix-03-derivable-traits.md  appendix-04-useful-development-tools.md  appendix-05-editions.md  appendix-06-translation.md  appendix-07-nightly-rust.md  ch00-00-introduction.md  ch01-00-getting-started.md  ch01-01-installation.md  ch01-02-hello-world.md  ch01-03-hello-cargo.md  ch02-00-guessing-game-tutorial.md  ch03-00-common-programming-concepts.md  ch03-01-variables-and-mutability.md  ch03-02-data-types.md  ch03-03-how-functions-work.md  ch03-04-comments.md  ch03-05-control-flow.md  ch04-00-understanding-ownership.md  ch04-01-what-is-ownership.md  ch04-02-references-and-borrowing.md  ch04-03-slices.md  ch05-00-structs.md  ch05-01-defining-structs.md  ch05-02-example-structs.md  ch05-03-method-syntax.md  ch06-00-enums.md  ch06-01-defining-an-enum.md  ch06-02-match.md  ch06-03-if-let.md  ch07-00-managing-growing-projects-with-packages-crates-and-modules.md  ch07-01-packages-and-crates.md  ch07-02-defining-modules-to-control-scope-and-privacy.md  ch07-03-paths-for-referring-to-an-item-in-the-module-tree.md  ch07-04-bringing-paths-into-scope-with-the-use-keyword.md  ch07-05-separating-modules-into-different-files.md  (+75 more)
md1/: SUMMARY.md  appendix-01-keywords.md  (+107 more)
(+184 files in other folders)
