[project]
name = "hy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "modelscope>=1.36.2",
    "torchvision>=0.26.0",
    "torch>=2.6.0",
    "transformers>=5.6.2",
    "bitsandbytes>=0.49.2",
    "beautifulsoup4>=4.14.3",
    "chardet>=7.4.3",
    "tqdm>=4.67.3",
]

# 定义额外的 PyTorch 索引
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true   # 仅用于明确指定的包

# 为 torch 和 torchvision 绑定该索引
[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
